--- a/styles/main.css
+++ b/styles/main.css
@@ -4,11 +4,28 @@ body, html {
   margin: 0;
   padding: 0; }
 
+body {
+  font-size: 14px; }
+  body#pixi {
+    background-color: #037fb7;
+    height: 100%;
+    color: #ffffff; }
+
 #wrapper {
   height: 100%; }
 
 section {
-  height: 90%; }
+  height: 90%;
+  width: 100%;
+  display: table; }
+  section .container {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center; }
+    section .container a {
+      color: #000;
+      font-weight: 700;
+      font-size: 3em; }
   section#first {
     background-color: #b7b7b7; }
   section#second {
@@ -21,6 +38,7 @@ section {
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0; }
+  left: 0;
+  border: 1px solid #000000; }
 
 /*# sourceMappingURL=main.css.map */
