--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import "mixins";
 
 
+
 body, html {
   width: 100%;
   height: 100%;
@@ -9,7 +10,13 @@ body, html {
 }
 
 body {
+  font-size: 14px;
 
+  &#pixi {
+    background-color: #037fb7;
+    height: 100%;
+    color: #ffffff;
+  }
 }
 
 #wrapper {
@@ -18,6 +25,20 @@ body {
 
 section {
   height: 90%;
+  width: 100%;
+  display: table;
+
+  .container {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+
+    a {
+      color: #000;
+      font-weight: 700;
+      font-size: 3em;
+    }
+  }
 
   &#first {
     background-color: #b7b7b7;
@@ -30,8 +51,13 @@ section {
   &#third {
     background-color: #6884b7;
   }
+
+  &#pixi {
+
+  }
 }
 
 #myCanvas {
   @include position(fixed, 0 0 0 0);
+  border: 1px solid #000000;
 }
